Implement specified form method overwrite